--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
         <h1 class="mb-0">Ricardo
           <span class="text-primary">Roiseman</span>
         </h1>
-        <div class="subheading mb-5">3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
-          <a href="mailto:name@email.com">name@email.com</a>
+        <div class="subheading mb-5">Toronto · Ontario · Canada · (647) 517-4341 ·
+          <a href="mailto:name@email.com">ricardoroiseman@gmail.com</a>
         </div>
-        <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+        <p class="lead mb-5">Coming soon!</p>
         <div class="social-icons">
-          <a href="#">
+          <a href="https://www.linkedin.com/in/ricardo-roiseman-6133889a">
             <i class="fab fa-linkedin-in"></i>
           </a>
           <a href="#">
@@ -149,27 +149,39 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">University of Colorado Boulder</h3>
-            <div class="subheading mb-3">Bachelor of Science</div>
-            <div>Computer Science - Web Development Track</div>
-            <p>GPA: 3.23</p>
+            <h3 class="mb-0">University of Toronto</h3>
+            <div class="subheading mb-3">Bachelor of Applied Science</div>
+            <div>Electrical Engineering</div>
+            <p>GPA: Science Without Borders</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2006 - May 2010</span>
+            <span class="text-primary">August 2013 - December 2014</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">James Buchanan High School</h3>
-            <div class="subheading mb-3">Technology Magnet Program</div>
-            <p>GPA: 3.56</p>
+            <h3 class="mb-0">Federal Fluminense University</h3>
+            <div class="subheading mb-3">Bachelor of Applied Science</div>
+            <div>Electrical Engineering</div>
+            <p>GPA: 7.5</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2002 - May 2006</span>
+            <span class="text-primary">January 2010 - July 2017</span>
           </div>
         </div>
 
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+          <div class="resume-content">
+            <h3 class="mb-0">Georgian College</h3>
+            <div class="subheading mb-3">Big Data Analytics</div>
+            <p>GPA: 4.0</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">August 2018 - April 2019</span>
+          </div>
+        </div>          
+          
       </div>
     </section>
 
