--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
           <a href="https://www.linkedin.com/in/ricardo-roiseman-6133889a">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a href="#">
+          <a href="https://github.com/RicardoRoiseman">
             <i class="fab fa-github"></i>
           </a>
-          <a href="#">
-            <i class="fab fa-twitter"></i>
+          <a href="https://public.tableau.com/profile/ricardo.lima.roiseman#!/">
+            <i> <img src="img/tableau.png" style="width:45px;height:45px;padding-bottom:5px;"/><i/>
           </a>
           <a href="#">
             <i class="fab fa-facebook-f"></i>
@@ -86,6 +86,24 @@
         </div>
       </div>
     </section>
+
+        <hr class="m-0">
+
+        <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="portfolio">
+          <div class="w-100">
+            <h2 class="mb-5">Portfolio</h2>
+            <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+              <img src="img/speaker.png"/>
+              <div class="resume-content">
+                <h3 class="mb-0">Overview of the Toronto Blue Jays 2018 Season</h3>
+                <div class="subheading mb-3">PowerBI, Excel</div>
+                <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+              </div>
+            </div>
+
+          </div>
+
+        </section>
 
     <hr class="m-0">
 
