--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
       <span class="d-block d-lg-none">Ricardo Roiseman</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/speaker.png" alt="">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/speak.png" alt="">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -93,7 +93,7 @@
           <div class="w-100">
             <h2 class="mb-5">Portfolio</h2>
             <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-              <img src="img/speaker.png"/>
+              <img src="img/speak.png"/>
               <div class="resume-content">
                 <h3 class="mb-0">Overview of the Toronto Blue Jays 2018 Season</h3>
                 <div class="subheading mb-3">PowerBI, Excel</div>
