--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
           <a class="nav-link js-scroll-trigger" href="#about">About</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
         </li>
         <li class="nav-item">
@@ -113,45 +116,46 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Senior Web Developer</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+            <h3 class="mb-0">Rewards / Diversity and Inclusion Analyst</h3>
+            <div class="subheading mb-3">Korn Ferry</div>
+            <p>&#9656; Plan, develop, implement and evaluate strategies including policies, programs and procedures to address an organization's requirements.<br>
+              &#9656; Manipulate large datasets through SQL to generate Diversity & Inclusion market insights. <br>
+              &#9656; Generate salary predictions based on client’s dataset using logistic regression algorithm in R programming. <br>
+              &#9656; Create PowerBI dashboards in order to tell a story to clients and visually demonstrate the company’s strategies.</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2013 - Present</span>
+            <span class="text-primary">May 2019 - Present</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Web Developer</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+            <h3 class="mb-0">Electrical Engineer - Utilities</h3>
+            <div class="subheading mb-3">Light S.A.</div>
+            <p>&#9656; Used Artificial Intelligence (AI) to develop a neural network to predict the value of the system average interruption duration index (SAIDI), using MATLAB and Excel, reducing the RMSE by 36%.<br>
+              &#9656; Developed maintenance plans for the distribution system and electrical substations based on the company’s data.<br>
+              &#9656; Researched and implemented a woodchipper machine, changing the entire tree trimming operation and saving 1.7 million dollars per year for the company on operation costs.<br>
+              &#9656; Created dashboards on Power BI to show KPIs and to sponsor innovation projects.<br>
+              &#9656; Updated and ran a system for Delivered Voltage Fluctuation (DVF) management and payment using Microsoft Access to use
+database of clients and decide those that needed to be compensated every month.</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">December 2011 - March 2013</span>
+            <span class="text-primary">January 2015 - August 2018</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Junior Web Designer</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+            <h3 class="mb-0">Stock Market Trader Intern</h3>
+            <div class="subheading mb-3">Capital Investments</div>
+            <p>&#9656;	Confirm Trades, Positions and Monthly P&L in a total of 500 million dollars of Asset Under Management (AUM) in a timely and efficient manner. <br>
+              &#9656;	Create new strategies for electronically traded products. <br>
+              &#9656;	Managed and traded Brazilian Stock Market (BOVESPA) equities utilizing firm's risk management strategies/capital.<br>
+              &#9656;	Collaborated with programmers to design and develop excel spreadsheets.
+              &#9656;	Build and maintain client relationship to provide information about the company strategy.</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">July 2010 - December 2011</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
-          <div class="resume-content">
-            <h3 class="mb-0">Web Design Intern</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">September 2008 - June 2010</span>
           </div>
         </div>
 
@@ -168,9 +172,9 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">University of Toronto</h3>
-            <div class="subheading mb-3">Bachelor of Applied Science</div>
-            <div>Electrical Engineering</div>
-            <p>GPA: Science Without Borders</p>
+            <div class="subheading mb-3">Bachelor of Applied Science - Electrical Engineering</div>
+            <div>Description</div>
+            <p>Science Without Borders</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">August 2013 - December 2014</span>
@@ -180,9 +184,9 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
             <h3 class="mb-0">Federal Fluminense University</h3>
-            <div class="subheading mb-3">Bachelor of Applied Science</div>
-            <div>Electrical Engineering</div>
-            <p>GPA: 7.5</p>
+            <div class="subheading mb-3">Bachelor of Applied Science - Electrical Engineering</div>
+            <div>Description</div>
+            <p>GPA: 7.5/10</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">January 2010 - July 2017</span>
@@ -192,8 +196,8 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
             <h3 class="mb-0">Georgian College</h3>
-            <div class="subheading mb-3">Big Data Analytics</div>
-            <p>GPA: 4.0</p>
+            <div class="subheading mb-3">Post-Graduate Diploma - Big Data Analytics</div>
+            <p>GPA: 4.0/4.0</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">August 2018 - April 2019</span>
