--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
           <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
+          <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
+          <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
         </li>
       </ul>
     </div>
@@ -81,7 +81,7 @@
             <i class="fab fa-github"></i>
           </a>
           <a href="https://public.tableau.com/profile/ricardo.lima.roiseman#!/">
-            <i> <img src="img/tableau.png" style="width:45px;height:45px;padding-bottom:5px;"/><i/>
+            <i> <img src="img/tableau.png" style="width:45px;height:45px;padding-bottom:5px;"/></i>
           </a>
           <a href="#">
             <i class="fab fa-facebook-f"></i>
@@ -181,7 +181,7 @@ database of clients and decide those that needed to be compensated every month.<
           </div>
         </div>
 
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Federal Fluminense University</h3>
             <div class="subheading mb-3">Bachelor of Applied Science - Electrical Engineering</div>
@@ -193,10 +193,12 @@ database of clients and decide those that needed to be compensated every month.<
           </div>
         </div>
 
+
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
             <h3 class="mb-0">Georgian College</h3>
             <div class="subheading mb-3">Post-Graduate Diploma - Big Data Analytics</div>
+            <div>Description</div>
             <p>GPA: 4.0/4.0</p>
           </div>
           <div class="resume-date text-md-right">
@@ -273,16 +275,6 @@ database of clients and decide those that needed to be compensated every month.<
 
     <hr class="m-0">
 
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
-      <div class="w-100">
-        <h2 class="mb-5">Interests</h2>
-        <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-        <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
-      </div>
-    </section>
-
-    <hr class="m-0">
-
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
       <div class="w-100">
         <h2 class="mb-5">Awards &amp; Certifications</h2>
@@ -316,6 +308,17 @@ database of clients and decide those that needed to be compensated every month.<
         </ul>
       </div>
     </section>
+
+    <hr class="m-0">
+
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
+      <div class="w-100">
+        <h2 class="mb-5">Interests</h2>
+        <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
+        <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+      </div>
+    </section>
+
 
   </div>
 
