--- a/index.html
+++ b/index.html
@@ -95,14 +95,65 @@
         <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="portfolio">
           <div class="w-100">
             <h2 class="mb-5">Portfolio</h2>
-            <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-              <img src="img/speak.png"/>
-              <div class="resume-content">
-                <h3 class="mb-0">Overview of the Toronto Blue Jays 2018 Season</h3>
-                <div class="subheading mb-3">PowerBI, Excel</div>
-                <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+
+            <!-- Page Features -->
+            <div class="row text-center">
+
+              <div class="col-lg-5 col-md-6 mb-4">
+                <div class="card h-100">
+                  <img class="card-img-top" src="http://placehold.it/500x325" alt="">
+                  <div class="card-body">
+                    <h4 class="card-title">Card title</h4>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
+                  </div>
+                  <div class="card-footer">
+                    <a href="post1.html" class="btn btn-primary" style="background-color:#2B7A78; border-color:#2B7A78;">Find Out More!</a>
+                  </div>
+                </div>
               </div>
+
+              <div class="col-lg-5 col-md-6 mb-4">
+                <div class="card h-100">
+                  <img class="card-img-top" src="http://placehold.it/500x325" alt="">
+                  <div class="card-body">
+                    <h4 class="card-title">Card title</h4>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo magni sapiente, tempore debitis beatae culpa natus architecto.</p>
+                  </div>
+                  <div class="card-footer">
+                    <a href="#" class="btn btn-primary" style="background-color:#2B7A78; border-color:#2B7A78;">Find Out More!</a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-lg-5 col-md-6 mb-4">
+                <div class="card h-100">
+                  <img class="card-img-top" src="http://placehold.it/500x325" alt="">
+                  <div class="card-body">
+                    <h4 class="card-title">Card title</h4>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
+                  </div>
+                  <div class="card-footer">
+                    <a href="#" class="btn btn-primary" style="background-color:#2B7A78; border-color:#2B7A78;">Find Out More!</a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-lg-5 col-md-6 mb-4">
+                <div class="card h-100">
+                  <img class="card-img-top" src="http://placehold.it/500x325" alt="">
+                  <div class="card-body">
+                    <h4 class="card-title">Card title</h4>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo magni sapiente, tempore debitis beatae culpa natus architecto.</p>
+                  </div>
+                  <div class="card-footer">
+                    <a href="#" class="btn btn-primary" style="background-color:#2B7A78; border-color:#2B7A78;">Find Out More!</a>
+                  </div>
+                </div>
+              </div>
+
             </div>
+            <!-- /.row -->
+
 
           </div>
 
